--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
             <li class="contact">
               <ul>
                 <li>
-                  <a href="https://www.linkedin.com/in/arian-afsharian-7a3903156"><i class="ri-linkedin-fill"></i></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/arian-afsharian-7a3903156"><i class="ri-linkedin-fill"></i></a>
                 </li>
                 <li>
-                  <a href="https://github.com/ari420"><i class="ri-github-fill"></i></a>
+                  <a target="_blank" href="https://github.com/ari420"><i class="ri-github-fill"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/component__shop?igsh=enRla3lxa3dzYXho"><i class="ri-instagram-line"></i></a>
+                  <a target="_blank" href="https://www.instagram.com/component__shop?igsh=enRla3lxa3dzYXho"><i class="ri-instagram-line"></i></a>
                 </li>
               </ul>
             </li>
