--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Arifiy</title>
     <link rel="stylesheet" href="asset/css/css_reset.css" />
     <link rel="stylesheet" href="asset/css/css_main.css" />
     <link
