--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0” /> 
+    <meta name=”theme-color” content=”#F0F”> 
+    <link rel=”apple-touch-icon” href=”...”>
     <title>Arifiy</title>
     <link rel="stylesheet" href="asset/css/css_reset.css" />
     <link rel="stylesheet" href="asset/css/css_main.css" />
@@ -251,15 +254,16 @@
       </ul>
     </nav>
      <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/service-worker.js')
-          .then(registration => {
-            console.log('Service Worker registered with scope:', registration.scope);
-          })
-          .catch(error => {
-            console.error('Service Worker registration failed:', error);
-          });
-      }      
+          if ("serviceWorker" in navigator) { 
+        navigator.serviceWorker
+           .register("serviceWorker.js") 
+          .then(reg => {
+             console.log("Service worker registred successfully", reg);
+           })
+           .catch(err => {
+             console.log("service worker not registred !!", err);
+           }); 
+      }
     </script>
 
     <!-- end nav player///////////////////////////////////////////////////////// -->
